syntax = "proto3";

package auth_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/Dashinamzh/pkg/auth_v1;auth_v1";

service Auth_v1{
    rpc Create(CreateRequest) returns(CreateResponse);
    rpc Get(GetRequest) returns(GetResponse);
    rpc Update(UpdateRequest) returns(google.protobuf.Empty);
    rpc Delete(DeleteRequest) returns(google.protobuf.Empty);
}

message UserInfo {
    string Name = 1;
    string email = 2;
}

message User {
    int64 id = 1;
    UserInfo info = 2;
    optional role enum = 3;
    google.protobuf.Timestamp CreatedAt= 4;
    google.protobuf.Timestamp UpdatedAt= 5;
}

enum role {
    user = 0;
    admin = 1;
}

message CreateRequest{
    string name = 1;
    string email = 2;
    string password = 3;
    string password_confirm = 4;
    optional role enum = 5;
}

message CreateResponse{
    int64 id = 1;
}

message GetRequest{
    int64 id = 1;
}

message GetResponse{
    User user = 1;
}

message UpdateRequest{
    int64 id = 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue email = 3;
}

message DeleteRequest{
    int64 id =1;
}